--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?serverTimezone = GMT%2b8
+    url: jdbc:mysql://localhost:3306/ware_house?serverTimezone = GMT%2b8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,3 +18,7 @@ ihrm:
     config:
       key: ihrm-company
       ttl: 3600000
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
